@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>mystic-crypt-ui</artifactId>
-	<version>5.2</version>
+	<version>5.2.1</version>
 
 	<properties>
 		<!-- EXTENSIONS LIB versions -->
@@ -134,4 +134,51 @@
 
 	</build>
 
+
+	<profiles>
+		<profile>
+			<id>launch4j-executable-creation</id>
+			<!-- This is the profile to use for create the executable for the os windows -->
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+			<plugins>
+
+				<plugin>
+					<groupId>com.akathist.maven.plugins.launch4j</groupId>
+					<artifactId>launch4j-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>l4j-clui</id>
+							<phase>package</phase>
+							<goals><goal>launch4j</goal></goals>
+							<configuration>
+								<headerType>console</headerType>
+								<outfile>target/${full-app-name}.exe</outfile>
+								<jar>target/${artifactId}-jar-with-dependencies.jar</jar>
+								<errTitle>${full-app-name}</errTitle>
+								<classPath>
+									<mainClass>de.alpharogroup.mystic.crypt.MainApplication</mainClass>
+									<addDependencies>false</addDependencies>
+									<preCp>anything</preCp>
+								</classPath>
+								<jre>
+									<minVersion>1.8.0_40</minVersion>
+									<opts>
+										<opt>-Djava.endorsed.dirs=./endorsed</opt>
+									</opts>
+								</jre>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
 </project>
